<resources>
    <string name="app_name">PrinterSample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_url">Enter the url</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="print_qr">Print QR</string>
    <string name="print_logo">print logo</string>
</resources>