<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".view.TicketFragment">

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_the_url"
        android:inputType="textUri"
        android:maxLines="1"
        android:background="@drawable/background"
        android:layout_marginTop="100dp"
        android:padding="12dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:tag="1"
        android:text="@string/print_logo"
        android:layout_marginTop="16dp"/>
    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/qrPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/print_qr"
        android:tag="2"
        android:background="@drawable/button_shape"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/barcodePrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:tag="3"
        android:text="@string/print_barcode"
        android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/printReceipt"
            android:layout_width="match_parent"
            android:background="@drawable/button_shape"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:tag="4"
            android:text="@string/print_receipt"
            android:layout_marginTop="16dp"/>


</LinearLayout>
